# cann-competitions

./: CONTRIBUTING.md  DIRECTORY_STRUCTURE.md  README.md
01_official/cann-challenge-2025/: README.md
01_official/cann-challenge-2025/resources/: requirements.txt
01_official/cann-challenge-2025/submissions/team01_zhangsan_convolution-optimization/: README.md
02_enterprise/regional/ai-optimization-contest-2025/: README.md
03_university/CANN-ops-test-challenge-2026/:  CONTRIBUTING.md  CONTRIBUTING.md  README.md  training.md
03_university/CANN-ops-test-challenge-2026/final/problems/: Cumsum.md
03_university/CANN-ops-test-challenge-2026/final/submissions/gdufe_zuodeshadoudui-allrightteam/: README.md
03_university/CANN-ops-test-challenge-2026/final/submissions/gzhu-hajimi555/: README.md
03_university/CANN-ops-test-challenge-2026/final/submissions/gzhu_jiaobulv/: README.md
03_university/CANN-ops-test-challenge-2026/final/submissions/gzhu_miaomiaoshuilan-team/: README.md
03_university/CANN-ops-test-challenge-2026/final/submissions/gzpyp _biemalezailianle/: README.md
03_university/CANN-ops-test-challenge-2026/final/submissions/jit_xingchen/: README.md
03_university/CANN-ops-test-challenge-2026/final/submissions/nchu_qun-xing-shan-yao-shi/: README.md
03_university/CANN-ops-test-challenge-2026/final/submissions/qhist_yige-team/: README.md
03_university/CANN-ops-test-challenge-2026/final/submissions/squ_Apollo-squad/: README.md
03_university/CANN-ops-test-challenge-2026/final/submissions/team01_njtech_longhu/: README.md
03_university/CANN-ops-test-challenge-2026/final/submissions/team22_gzhu_shanjiyiwangdui/: README.md
03_university/CANN-ops-test-challenge-2026/final/submissions/ucas_woyeyaosima-dui/: README.md
03_university/CANN-ops-test-challenge-2026/preliminary/: README.md
03_university/nju/CANN-ops-test-challenge-2026/final/: README.md
03_university/nju/CANN-ops-test-challenge-2026/final/problems/: Add.md
03_university/nju/nju-ai-challenge-2025/: README.md
04_tasks/01_community-task-2026/: README.md
04_tasks/01_community-task-2026/docs/: README.md
04_tasks/01_community-task-2026/docs/202604/: Equal_task_doc.md  ForeachAddListV2_task_doc.md  ForeachAddScalarV2_task_doc.md  ForeachMulList_task_doc.md  ForeachRoundOffNumberV2_task_doc.md  ForeachSubListV2_task_doc.md  IsClose_task_doc.md  Logit_task_doc.md  MaxUnpool2d_task_doc.md  MaxUnpool3d_task_doc.md  Neg_task_doc.md  Pdist_task_doc.md  Polar_task_doc.md  Sign_task_doc.md  Sleep_task_doc.md  SlidingTileAttention_task_doc.md  aclnnAngleV2_task_doc.md  foreach_exp_task_doc.md  foreach_expm1_task_doc.md  foreach_neg_task_doc.md  median_task_doc.md
04_tasks/01_community-task-2026/resources/: design_template.md
04_tasks/01_community-task-2026/tasklist/02-24-SoftMarginLossGrad/TeamName/: CMakeLists.txt  README.md
04_tasks/01_community-task-2026/tasklist/02-5-NanToNum/TeamName/: CMakeLists.txt  README.md
04_tasks/01_community-task-2026/tasklist/03-15-L2Loss/TeamName/: CMakeLists.txt  README.md
final/submissions/AHNU_doushidui/: README.md
university/seu/seu-hpc-contest-2025/: README.md
(+267 files in other folders)
